--- a/index.html
+++ b/index.html
@@ -4,56 +4,224 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-    <title>Портфолио Junior верстальщика</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <title>Botanica. Цветы в Петербурге</title>
   </head>
 
-  <body>
+  <body class="page-index">
     <header class="page-header">
-        <div class="container">
-            <a href="mailto:shevtsov.yuri92@gmail.com" class="header-email">shevtsov.yuri92@gmail.com</a>
-            <a href="https://github.com/Shvved" class="header-phone">github.com/Shvved</a>
-        </div>
+        <nav class="header-navigation">
+            <ul>
+                <li><a href="#">Каталог</a></li>
+                <li><a href="#">Доставка и оплата</a></li>
+                <li><a href="#">Отзывы</a></li>
+                <li><a href="index.html"><img src="img/logo.svg" alt="Главная страница" width="100" height="32.28"></a></li>
+                <li><a href="#">Спецпредложения</a></li>
+                <li><a href="#">Контакты</a></li>
+                <li><a href="#">Корзина</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <section class="hero-image">
-        <div class="container">
-            <h1 class="heading">Шевцов Юрий</h1>
-            <p>Junior верстальщик</p>
+    <main class="container">
+        <div class="presentation">
+            <div class="wrapper">
+                <h1>Авторские букеты<br><i>в Петербурге</i></h1>
+                <p>Оригинальные свежие букеты с доставкой по всему городу</p>
+                <a class="button" href="#">Смотреть каталог</a>
+            </div>
+            <img class="first-img" src="img/img1.jpg" alt="" width="386" height="404">
+            <img class="second-img" src="img/img2.jpg" alt="" width="387" height="420">
         </div>
-    </section>
+        <section class="features">
+            <h2 class="visually-hidden">Преимущества</h2>
+            <ul class="features-list">
+                <li class="feature-item feature-delivery">
+                    <h3 class="list-title feature-title">Быстрая доставка</h3>
+                    <p class="list-text feature-text">Можем собрать букет и передать его в доставку всего за час.</p>
+                </li>
+                <li class="feature-item feature-bouquet">
+                    <h3 class="list-title feature-title">Всегда свежие букеты</h3>
+                    <p class="list-text feature-text">Тщательно следим за состоянием цветов, а опытные флористы отбирают для букетов каждый цветок.</p>
+                </li>
+                <li class="feature-item feature-photo">
+                    <h3 class="list-title feature-title">Отправляем фото цветов</h3>
+                    <p class="list-text feature-text">Перед доставкой сделаем фотографию букета и отправим вам.</p>
+                </li>
+            </ul>
+        </section>
+        <section class="popular">
+            <h2>Популярные букеты</h2>
+                <ul class="slider-list">
+                    <li class="slider-item">
+                        <ul class="wrapper-list">
+                            <li>
+                                <h3 class="slider-item-title">Букет <span class="bouquet-title">Нежность</span></h3>
+                                <p class="slider-item-description">Элегантный букет, который станет отличным подарком на день рождения или юбилей.</p>
+                                <p class="slider-item-size">30 × 40 см</p>
+                                <p class="slider-item-price">3600 руб.</p>
+                                <a class="slider-item-button button" href="#">Заказать</a>
+                            </li>
+                            <li>
+                                <img src="files/nezhnost.png" alt="Фото букета" width="387" height="438">
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <div class="slider-button-container">
+                    <button class="slider-button slider-button-back" type="button"></button>
+                    <button class="slider-button slider-button-next" type="button"></button>
+                </div>
+        </section>
+        <section class="catalogue">
+            <ul class="catalogue-list">
+                <li class="catalogue-item">
+                    <a href="#">
+                        <h3>Свадебные букеты</h3>
+                        <p>Букеты для невест</p>
+                    </a>
+                </li>
+                <li class="catalogue-item">
+                    <a href="#">
+                        <h3>Букеты с пионами</h3>
+                        <p>Букеты с сезонными пионами</p>
+                    </a>
+                </li>
+                <li class="catalogue-item">
+                    <a href="#">
+                        <h3>Выбрать букет</h3>
+                        <p>Букеты в ассортименте</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section class="sale">
+            <h2>Скидка 10% на первый заказ</h2>
+            <p>Если заказываете у нас букет впервые — при оформлении заказа введите промокод «Botanika2021» и получите скидку 10%.</p>
+        </section>
+        <section class="steps-for-ideal">
+            <h2>4 шага к идеальному букету</h2>
+            <ul class="steps-list">
+                <li class="step-item">
+                    <h3 class="list-title step-title">Заказ</h3>
+                    <p class="list-text step-text">Выберите понравившийся букет из каталога и оформите заказ</p>
+                </li>
+                <li class="step-item">
+                    <h3 class="list-title step-title">Уточнение деталей</h3>
+                    <p class="list-text step-text">Наш флорист позвонит вам после оформления заказа, чтобы уточнить детали</p>
+                </li>
+                <li class="step-item">
+                    <h3 class="list-title step-title">Оплата</h3>
+                    <p class="list-text step-text">Оплатить заказ можно онлайн на сайте или при получении</p>
+                </li>
+                <li class="step-item">
+                    <h3 class="list-title step-title">Доставка</h3>
+                    <p class="list-text step-text">Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
+                </li>
+            </ul>
+        </section>
+        <section class="social-links">
+            <b>Следите за нашими новостями</b>
+            <p>Подписывайтесь на наши соцсети и узнавайте о новинках и акциях первым.</p>
+            <ul>
+                <li>
+                    <a class="social-button" href="#">
+                        <span class="visually-hidden">Instagram</span>
+                        <svg>
 
-    <section class="intro">
-        <div class="container">
-            <h2 class="subheading">Давайте познакомимся</h2>
-            <figure class="user-image">
-                <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
-            </figure>
-            <h3>Пара слов о себе</h3>
-            <p>Сисадмин, желающий поменять профессию. Люблю узнавать что-то новое, ковыряться в технологиях и читать IT-новости</p>
-            <h3>Чем могу быть полезен</h3>
-            <p>Быстро печатаю и гуглю, нужную инфу</p>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="social-button" href="#">
+                        <span class="visually-hidden">Facebook</span>
+                        <svg>
+
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="social-button" href="#">
+                        <span class="visually-hidden">Twitter</span>
+                        <svg>
+
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <div class="reviews">
+            <h2>Отзывы</h2>
+            <ul class="reviews-list">
+                <li class="review-item">
+                    <figure>
+                        <blockquote>
+                            Всё очень понравилось! Быстрое оформление заказа, выбор удобного времени доставки. Всем большое спасибо!
+                        </blockquote>
+                        <figcaption>Марина</figcaption>
+                    </figure>
+                </li>
+                <li class="review-item">
+                    <figure>
+                        <blockquote>
+                            Внимательные флористы, вежливые. Магазин находится прям рядом с метро. Букет очень понравился, буду ещё заказывать!
+                        </blockquote>
+                        <figcaption>Татьяна</figcaption>
+                    </figure>
+                </li>
+                <li class="review-item">
+                    <figure>
+                        <blockquote>
+                            Выбор букетов на любой вкус и цену. Бывают хорошие скидки, а флористы всегда помогут и точно соберут красивый букет!
+                        </blockquote>
+                        <figcaption>Ольга</figcaption>
+                    </figure>
+                </li>
+            </ul>
         </div>
-    </section>
-
-    <section class="portfolio">
-        <div class="container">
-            <h2 class="subheading">Мои работы</h2>
-            <figure class="project-image">
-                <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
-            </figure>
-            <h3>Магазин товаров для дома</h3>
-            <p>Мой первый сайт (в разработке).</p>
-            <a class="button" href="source/project/index.html">Открыть страницу</a>
-
-            <h3>Блог начинающего верстальщика</h3>
-            <p>Статический блог про обучение HTML и CSS (в разработке).</p>
-        </div>
-    </section>
+    </main>
 
     <footer class="page-footer">
-        <div class="container">
-            <a href="mailto:shevtsov.yuri92@gmail.com" class="footer-email">shevtsov.yuri92@gmail.com</a>
-            <a href="https://github.com/Shvved" class="footer-phone">github.com/Shvved</a>
+        <nav class="footer-navigation">
+                <ul>
+                    <li><a href="index.html"><img src="logo.png" alt="Главная страница" width="100" height="32.28"> </a> </li>
+                    <li>Каталог</li>
+                    <li>Доставка и оплата</li>
+                    <li>Отзывы</li>
+                    <li>Спецпредложения</li>
+                    <li>Контакты</li>
+                    <li>
+                        <ul>
+                            <li>
+                                <a class="social-button" href="#">
+                                    <span class="visually-hidden">Instagram</span>
+                                    <svg>
+
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="social-button" href="#">
+                                    <span class="visually-hidden">Facebook</span>
+                                    <svg>
+
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="social-button" href="#">
+                                    <span class="visually-hidden">Twitter</span>
+                                    <svg>
+
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="footer-list">
+                <li></li>
+            </ul>
         </div>
     </footer>
   </body>
